--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-dotenv": "^3.0.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.0.4",
     "react-native-image-zoom-viewer": "^3.0.1",
